--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,8 @@ jobs:
     # build the app package for s390x
     - name: mvn clean package
       run: |
-        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk*/jre
+        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk*/jre && mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
         echo $JAVA_HOME
-        mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
   
     # build the container image for s390x
     - name: podman build
