--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,6 +204,7 @@ jobs:
 
   createPullRequest:
     runs-on: ubuntu-latest
+    needs: acs-image-scan
     steps:
       - uses: actions/checkout@v4
       - name: Create Pull Request
