--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
