--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: main
+          ref: DevSecOps
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
@@ -34,7 +34,7 @@ jobs:
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
-          branch: DevSecOps
+          branch: main
           delete-branch: false
           title: 'Update container image to ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}'
           body: |
