--- a/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-mainservice-java
-        image: quay.io/mmondics/acmeair-mainservice-java-manifest:manifest-ddb60955ff2d41e19d993f2fdb99d51a01eed310
+        image: quay.io/mmondics/acmeair-mainservice-java-manifest:manifest-micro4
         ports:
         - containerPort: 9080
         - containerPort: 9443
