--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ on:
   push:
     paths:
       - acmeair/source/acmeair-mainservice-java/src/main/webapp/*
+    branches:
+      - DevSecOps
 #on: workflow_dispatch
 
 jobs:
