--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,8 @@ jobs:
     - name: mvn clean package
       run: |
         export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.s390x/jre
-        mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
+        cd ./acmeair/source/acmeair-mainservice-java
+        mvn clean package -f pom.xml
   
     # build the container image for s390x
     #- name: podman build
@@ -59,7 +60,7 @@ jobs:
         image: ${{ env.IMAGE_REGISTRY }}/${{ env.APP_NAME }}
         tags: ${{ env.Z_IMAGE_TAGS }}
         containerfiles: |
-          ./acmeair/source/acmeair-mainservice-java/Dockerfile
+          ./Dockerfile
   
     # push the s390x container image to repo
     - name: Push to Registry 
@@ -89,7 +90,8 @@ jobs:
     - name: mvn clean package
       run: |
         export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre
-        mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
+        cd ./acmeair/source/acmeair-mainservice-java
+        mvn clean package -f ./pom.xml
 
     # build the container image for amd64
     # - name: podman build
@@ -103,7 +105,7 @@ jobs:
         image: ${{ env.IMAGE_REGISTRY }}/${{ env.APP_NAME }}
         tags: ${{ env.X_IMAGE_TAGS }}
         containerfiles: |
-          ./acmeair/source/acmeair-mainservice-java/Dockerfile
+          ./Dockerfile
 
     # push the amd64 container image to repo
     - name: Push to Registry 
