--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ on:
 
 jobs:
   s390x-build-and-push: 
-    name: s390x build and push to quay.io
+    name: s390x build and push to Quay
     runs-on: [self-hosted, linux, s390x, native]
     environment: openshift
     
@@ -68,7 +68,7 @@ jobs:
         tls-verify: false
 
   amd64-build-and-push: 
-    name: amd64 build and push to quay.io
+    name: amd64 build and push to Quay
     runs-on: [self-hosted, linux, x64, native]
     environment: openshift
 
@@ -105,8 +105,8 @@ jobs:
         tls-verify: false
 
   create-manifest:
-    name: combine amd64 and s390x container images into a single manifest and push to quay.io
-    runs-on: [self-hosted, linux, s390x]
+    name: combine amd64 and s390x container images into a single manifest and push to Quay
+    runs-on: [self-hosted, linux, s390x, native]
     needs:
       - s390x-build-and-push
       - amd64-build-and-push
@@ -132,13 +132,13 @@ jobs:
   
   update-app-yaml:
     name: update acmeair mainservice application YAML to use new image manifest
-    runs-on: [self-hosted, linux, s390x]
+    runs-on: ubuntu-latest
     needs: create-manifest
     environment: openshift
     
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: DevSecOps
       # update image name in deployment YAML
