--- a/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-mainservice-java
-        image: quay-registry-quay-openshift-operators.apps.atsocppa.dmz/mmondics/acmeair-mainservice-java-manifest:manifest-19189b1c9a1ca5285e94c2b8143a3d58e5f4a5c3
+        image: image: quay.io/mmondics/acmeair-mainservice-java-manifest:manifest-micro4
         ports:
         - containerPort: 9080
         - containerPort: 9443
