--- a/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-mainservice-java
-        image: quay-registry-quay-openshift-operators.apps.atsocppa.dmz/mmondics/acmeair-mainservice-java-manifest:manifest-99e9539b3433998b0209c5c57a65c1aa494ff508
+        image: image: quay.io/mmondics/acmeair-mainservice-java-manifest:manifest-micro4
 
         ports:
         - containerPort: 9080
