--- a/acmeair/routes-atsocppa/acmeair-customerservice-route.yaml
+++ b/acmeair/routes-atsocppa/acmeair-customerservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-customer-route
 spec:
-  host: acmeair-rhacm.apps.x2pn.dmz
+  host: acmeair-rhacm.apps.atsocppa.dmz
   path: /customer
   to:
     kind: Service
