--- a/acmeair/routes-atsocppa/acmeair-flightservice-route.yaml
+++ b/acmeair/routes-atsocppa/acmeair-flightservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-flight-route
 spec:
-  host: acmeair-rhacm.apps.x2pn.dmz
+  host: acmeair-rhacm.apps.atsocppa.dmz
   path: /flight
   to:
     kind: Service
