--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -23,8 +23,8 @@ spec:
           - containerPort: 9443
         imagePullPolicy: Always
         resources:
-          limits: 
-            cpu: '3'
+#          limits: 
+#            cpu: '3'
           requests:
             cpu: '1500m'
         env:
