--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -23,8 +23,8 @@ spec:
           - containerPort: 9443
         imagePullPolicy: Always
         resources:
-#          limits:
-#            cpu: '4'
+         limits:
+           cpu: '4'
           requests:
             cpu: '2'
         env:
@@ -158,35 +158,35 @@ status: {}
 #           mountPath: /data/configdb
 #         - name: acmeair-customer-db-2
 #           mountPath: /data/db
-# ---
-# apiVersion: autoscaling/v2
-# kind: HorizontalPodAutoscaler
-# metadata:
-#   name: customerservice-hpa
-# spec:
-#   scaleTargetRef:
-#     apiVersion: apps/v1
-#     kind: Deployment
-#     name: acmeair-customerservice
-#   minReplicas: 2
-#   maxReplicas: 30
-#   metrics:
-#     - type: Resource
-#       resource:
-#         name: cpu
-#         target:
-#           averageUtilization: 10
-#           type: Utilization
-#   behavior:
-#     scaleDown:
-#       stabilizationWindowSeconds: 0
-#       policies:
-#       - type: Percent
-#         value: 200
-#         periodSeconds: 15
-#     scaleUp:
-#       stabilizationWindowSeconds: 0
-#       policies:
-#       - type: Percent
-#         value: 400
-#         periodSeconds: 5
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: customerservice-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: acmeair-customerservice
+  minReplicas: 2
+  maxReplicas: 30
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          averageUtilization: 10
+          type: Utilization
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 200
+        periodSeconds: 15
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 400
+        periodSeconds: 5
