Revert "remove cpu limits"
This reverts commit 55f8f14e1d784890b746f905ccb1aaabb3f561c9.

--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -23,8 +23,8 @@ spec:
           - containerPort: 9443
         imagePullPolicy: Always
         resources:
-#          limits:
-#            cpu: '4'
+          limits:
+            cpu: '4'
           requests:
             cpu: '2'
         env:
