--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -29,7 +29,7 @@ env:
 #       - acmeair/source/acmeair-mainservice-java/src/main/webapp/*
 #     branches:
 #       - DevSecOps
-on: workflow_dispatch
+# on: workflow_dispatch
 
 jobs:
   s390x-build-and-push: 
