--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: [self-hosted, linux, s390x, native]
     environment: openshift
 
-    # steps:
+    steps:
     # - name: Checkout
     #   id: checkout
     #   # checkout@v2 should be used until s390x runner version is updated
